<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/navigation_text_1" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_20"
        android:title="@string/navigation_text_2" />

    <item
        android:id="@+id/navigation_achievements"
        android:icon="@drawable/ic_rowing_20"
        android:title="@string/navigation_text_3" />
    <item
        android:id="@+id/navigation_club"
        android:icon="@drawable/ic_team_20"
        android:title="@string/navigation_text_4" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_20"
        android:title="@string/navigation_text_5" />
</menu>