<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.bzahov.rowingbg.achievements.ui.fragments.home.HomeFragment"
        android:label="@string/navigation_text_1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.bzahov.rowingbg.achievements.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/navigation_text_2"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.bzahov.rowingbg.achievements.ui.fragments.screens.notifications.NotificationsFragment"
        android:label="@string/navigation_text_3"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_club"
        android:name="com.bzahov.rowingbg.achievements.ui.fragments.screens.notifications.NotificationsFragment"
        android:label="@string/navigation_text_4"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bzahov.rowingbg.achievements.ui.fragments.profile.ProfileFragment"
        android:label="@string/navigation_text_5"
        tools:layout="@layout/fragment_profile" />
</navigation>